@@ -174,17 +174,6 @@ FSTRINGVALUE(Com::tTempSensorDefect,": temp sensor defect")
 FSTRINGVALUE(Com::tTempSensorWorking,": working")
 FSTRINGVALUE(Com::tDryModeUntilRestart,"Printer set into dry run mode until restart!")
 
-#ifdef DEBUG_SPLIT
-FSTRINGVALUE(Com::tDBGDeltaSeconds,"Seconds:")
-FSTRINGVALUE(Com::tDBGDeltaZDelta,"Z delta:")
-FSTRINGVALUE(Com::tDBGDeltaSegments,"Segments:")
-FSTRINGVALUE(Com::tDBGDeltaNumLines,"Num lines:")
-FSTRINGVALUE(Com::tDBGDeltaSegmentsPerLine,"segments_per_line:")
-FSTRINGVALUE(Com::tDBGDeltaMaxDS,"Max DS:")
-FSTRINGVALUE(Com::tDBGDeltaStepsPerSegment,"Steps Per Segment:")
-FSTRINGVALUE(Com::tDBGDeltaVirtualAxisSteps,"Virtual axis steps:")
-#endif // DEBUG_SPLIT
-
 #ifdef WAITING_IDENTIFIER
 FSTRINGVALUE(Com::tWait,WAITING_IDENTIFIER)
 #endif // WAITING_IDENTIFIER
